Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-78702

Resizing QQuickWindow leads to incorrect scissor with QRhi in some scenes

XMLWordPrintable

    • 30e27328e3d6446a343107c96f41324197ed7ef1 (qt/qtbase/5.14)

      Running the shadereffects example and reducing the window size leads to wrong scissor with D3D, Vulkan, and probably Metal too:

        For Gerrit Dashboard: QTBUG-78702
        # Subject Branch Project Status CR V

            lagocs Laszlo Agocs
            lagocs Laszlo Agocs
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes